SOS-845 Fix for user profile in contact center, allowing long names to truncate

--- a/portlets/contacts-portlet/docroot/contacts_center/css/main.css
+++ b/portlets/contacts-portlet/docroot/contacts_center/css/main.css
@@ -2,7 +2,6 @@
 
 $border-color: #EBEBEB;
 $section-header-bg: #CCE6F7;
-$toolbar-bg: #DCE3EA;
 
 #wrapper .contacts-portlet .panel-page-body {
 	padding: 0;
@@ -18,8 +17,9 @@ $toolbar-bg: #DCE3EA;
 	}
 
 	.contact-group-filter {
-		background-color: $toolbar-bg;
+		background-color: #DCE3EA;
 		border-bottom: 1px solid #C9C9C9;
+		border-right: 2px solid #C9C9C9;
 		font-size: 14px;
 		min-height: 31px;
 
@@ -64,7 +64,6 @@ $toolbar-bg: #DCE3EA;
 
 	.lfr-contact-grid-item {
 		display: block;
-		overflow: hidden;
 
 		.lfr-contact-thumb {
 			float: left;
@@ -98,8 +97,8 @@ $toolbar-bg: #DCE3EA;
 			}
 		}
 
-		.lfr-contact-name, .lfr-contact-extra, .lfr-contact-job-title {
-			overflow-x: hidden;
+		.lfr-contact-name, .lfr-contact-extra {
+			overflow: hidden;
 			text-overflow: ellipsis;
 			white-space: nowrap;
 		}
@@ -129,36 +128,33 @@ $toolbar-bg: #DCE3EA;
 		}
 	}
 
-	.contacts-result, .my-contacts {
-		.lfr-contact-grid-item {
-			cursor: pointer;
-			height: 35px;
-			padding: 5px;
-
-			.lfr-contact-thumb img {
-				width: 35px;
-			}
-		}
-	}
-
 	.contacts-result {
 		border-right: 1px solid #C9C9C9;
 		width: 30%;
 
 		.contacts-result-content {
 			bottom: 0;
-			overflow-x: hidden;
 			overflow-y: scroll;
 			position: absolute;
-			top: 38px;
-			width: 250px;
+			top: 0;
 		}
 
-		.lfr-contact-grid-item .lfr-contact-info {
-			font-size: 1em;
-			margin-left: 0;
-			overflow-x: hidden;
-			padding-left: 10px;
+		.lfr-contact-grid-item {
+			cursor: pointer;
+			height: 35px;
+			overflow: hidden;
+			padding: 5px;
+
+			.lfr-contact-thumb img {
+				width: 35px;
+			}
+
+			.lfr-contact-info {
+				font-size: 1em;
+				margin-left: 0;
+				overflow-x: hidden;
+				padding-left: 10px;
+			}
 		}
 
 		.more-results, .lfr-contact-grid-item:hover {
@@ -191,13 +187,19 @@ $toolbar-bg: #DCE3EA;
 		}
 	}
 
-	.personal-contact-list .contacts-result-content {
-		top: 0;
-	}
-
 	.my-contacts {
-		.lfr-contact-grid-item .lfr-contact-info {
-			margin-left: 40px;
+		.lfr-contact-grid-item {
+			height: 35px;
+			overflow: hidden;
+			padding: 5px;
+
+			.lfr-contact-thumb img {
+				width: 35px;
+			}
+
+			.lfr-contact-info {
+				margin-left: 40px;
+			}
 		}
 	}
 
@@ -206,22 +208,16 @@ $toolbar-bg: #DCE3EA;
 	}
 
 	.contacts-profile {
+		border-bottom-width: 1px;
+
 		.lfr-contact-grid-item {
 			border-bottom-width: 0;
 			padding: 10px 10px 5px;
 		}
 
-		.lfr-contact-name {
-			font-size: 2em;
-			height: 1.25em;
-			line-height: 1em;
-			overflow: hidden;
-			position: relative;
-			text-overflow: ellipsis;
-		}
-
 		.lfr-contact-name a {
-			position: absolute;
+			font-size: 2em;
+			line-height: 1em;
 		}
 
 		.lfr-contact-job-title {
@@ -243,6 +239,10 @@ $toolbar-bg: #DCE3EA;
 		}
 	}
 
+	.contacts-profile {
+		border-bottom-width: 0;
+	}
+
 	.contacts-result-container .contacts-container {
 		min-height: 500px;
 
@@ -251,26 +251,8 @@ $toolbar-bg: #DCE3EA;
 		}
 	}
 
-	.contacts-result-container-content {
-		padding-left: 250px;
-		position: relative;
-
-		.contacts-list {
-			bottom: 0;
-			left: 0;
-			position: absolute;
-			top: 0;
-			width: 250px;
-		}
-
-		.contacts-container {
-			float: none;
-			width: 100%;
-		}
-
-		.contacts-profile .lfr-contact-info {
-			padding: 8px;
-		}
+	.contacts-result-container-content .contacts-profile .lfr-contact-info {
+		padding: 8px;
 	}
 
 	.social-relations {
@@ -320,7 +302,8 @@ $toolbar-bg: #DCE3EA;
 	}
 
 	.toolbar {
-		background-color: $toolbar-bg;
+		background-color: #DCE3EA;
+		border-bottom: 1px solid #C9C9C9;
 		min-height: 31px;
 
 		.button-column {
@@ -365,10 +348,6 @@ $toolbar-bg: #DCE3EA;
 
 				.aui-icon-unfollow {
 					background-image: url(@theme_image_path@/social/unfollow.png);
-				}
-
-				.aui-icon-user {
-					background-image: url(@theme_image_path@/common/user_icon.png);
 				}
 
 				.edit-toolbar {
@@ -512,7 +491,7 @@ $toolbar-bg: #DCE3EA;
 			font-weight: bold;
 		}
 
-		.lfr-user-data-name a, .lfr-user-data-job-title, .lfr-user-data-extra {
+		.lfr-user-data-name, .lfr-user-data-job-title, .lfr-user-data-extra {
 			overflow: hidden;
 			text-overflow: hidden;
 			word-wrap: nowrap;
